# micronetplusplus

./: .gitignore  CMakeLists.txt  COMMONErrors.md  README.md  build.sh  vcpkg.json
.github/workflows/: ci.yml
include/micro/: matrix_ops.hpp  tensor.hpp
src/: tensor.cpp  train_xor.cpp
tests/: test_matrix_ops.cpp  test_tensor.cpp
